[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Structures/Structure.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Structures/Production.gd" type="Script" id=2]
[ext_resource path="res://Entities/Units/Tank.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/GFX/grey_border.png" type="Texture" id=4]
[ext_resource path="res://UI/GFX/white_fill.png" type="Texture" id=5]

[node name="TankProduction" instance=ExtResource( 1 )]

[node name="SelectionVisual" parent="." index="0"]
visible = false

[node name="Health" parent="." index="2"]
position = Vector2( 0, 12 )

[node name="CollisionShape2D" parent="." index="3"]
visible = false

[node name="Production" type="Node2D" parent="." index="4"]
script = ExtResource( 2 )
tank_scene = ExtResource( 3 )
build_time = 10

[node name="BuildProgress" type="TextureProgress" parent="Production" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = 18.0
margin_right = 180.0
margin_bottom = 63.0
rect_scale = Vector2( 0.1, 0.05 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
texture_under = null
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_under = Color( 1, 1, 1, 1 )
tint_over = Color( 1, 1, 1, 1 )
tint_progress = Color( 0, 0.25098, 1, 1 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 10
stretch_margin_right = 5
stretch_margin_bottom = 10
_sections_unfolded = [ "Rect", "Textures", "Tint", "Visibility" ]

[node name="BuildTimer" type="Timer" parent="Production" index="1"]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="Production/BuildTimer" to="Production" method="_on_BuildTimer_timeout"]
